--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,238 @@
+@import url("https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Roboto+Serif&display=swap");
 .App {
-  text-align: center;
+  font-family: "Gideon Roman", cursive;
+  background-image: linear-gradient(
+    rgba(255, 205, 205, 0.342),
+    #dad6d6,
+    rgba(108, 108, 139, 0.514)
+  );
+  min-height: 100vh;
+  padding: 5px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  width: 55px;
+  height: 55px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.home-button {
+  margin-left: auto !important;
+}
+.Appbar {
+  background-color: #fdfdfdeb !important;
+}
+.css-1y942vo-MuiButtonBase-root-MuiButton-root {
+  font-family: "Gideon Roman", cursive !important;
+  text-transform: none;
+  color: black !important;
+}
+.yr {
+  color: black;
+}
+.nav-items {
+  margin-left: auto;
+}
+@media screen and (min-width: 840px) {
+  .nav-items {
+    display: flex;
+    gap: 30px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cars-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.car-container {
+  height: 420px;
+  width: 345px;
+}
+.car-image {
+  height: 200px;
+  width: 345px;
+  object-fit: cover;
+}
+.name-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.name,
+.price {
+  margin: 5px;
+  padding: 8px;
+}
+.price {
+  background-color: rgb(247, 104, 52);
+  border-top-left-radius: 35px;
+}
+.build-year {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.detail-container {
+  color: rgb(82, 81, 81);
+  display: flex;
+  justify-content: space-evenly;
+  padding: 25px 0 25px 0;
+  align-items: center;
+  border-top: dashed 1px rgb(177, 177, 177);
+}
+.details {
+  display: flex;
+  align-items: center;
+}
+.year {
+  font-weight: bold;
+  color: black;
+}
+.booknow {
+  padding: 8px !important;
+  margin: 0px !important;
+  background-color: rgba(29, 71, 29, 0.788) !important;
+  border-radius: 25px !important;
+  color: aliceblue !important;
+}
+.build {
+  padding: 8px;
+  color: rgb(129, 118, 224);
+}
+.order-container,
+.add-car,
+.add-bike {
+  margin: 25px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 20px;
+  padding: 25px;
+  background: rgb(121, 200, 224);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 20px;
+}
+.add-bike-container,
+.add-car-container {
+  padding: 10px;
+  margin: 20px;
+  background-color: #ffffff;
+}
+@media screen and (min-width: 568px) {
+  .add-bike-container,
+  .add-car-container {
+    width: 570px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .add-bike,
+  .add-car {
+    height: 520px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .home-section,
+  .home-bike-section {
+    height: 320px !important;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+@media screen and (max-width: 597px) {
+  .home-section,
+  .home-bike-section {
+    height: 250px !important;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+@media screen and (max-width: 404px) {
+  .home-section,
+  .home-bike-section {
+    height: 220px !important;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+.sell-button {
+  background-color: #85056f !important;
+  font-family: serif !important;
+  color: #ffffff !important;
+  text-transform: none !important;
+  width: 20% !important;
+}
+.add-price,
+.add-mileage,
+.Engine-type,
+.driven {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
+.sell,
+.order {
+  display: flex;
+  align-items: center;
+
+  justify-content: center;
+}
+.order-button {
+  text-transform: none !important;
+  width: 30% !important;
+  background-color: #ff9100fb !important;
+  color: #ffffff !important;
+}
+.add-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.home-section {
+  height: 520px;
+  background-image: url("https://cdn.wallpapersafari.com/89/83/xMUqGr.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 20px;
+}
+.home-container {
+  opacity: 0.7 !important;
+}
+.home-title {
+  margin-left: 10px;
+  padding: 20px;
+  color: red;
+  border-left: 2px solid red;
+}
+.home1-title {
+  margin-left: 10px;
+  padding: 20px;
+  color: rgb(6, 4, 102);
+  border-left: 3px solid rgb(6, 4, 102);
+}
+.home2-title {
+  margin-left: 10px;
+  padding: 20px;
+  color: rgb(241, 253, 174);
+  border-left: 3px solid rgb(241, 253, 174);
 }
 
-.App-link {
-  color: #61dafb;
+.home-bike-section {
+  height: 520px;
+  background-image: url("/src/components/royel.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-more-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.more-button {
+  background-color: blue !important;
+  color: #ffffff !important;
+  text-transform: none !important ;
 }
