--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 15px;
 }
 .more-button {
   background-color: blue !important;
