--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,12 @@
   .add-car {
     height: 520px;
   }
+  .home-title,
+  .home1-title,
+  .home2-title {
+    font-size: 10px;
+    padding: 3px !important;
+  }
 }
 @media screen and (max-width: 820px) {
   .home-section,
@@ -137,6 +143,13 @@
     background-repeat: no-repeat;
     background-position: center;
   }
+  .home-title,
+  .home1-title,
+  .home2-title {
+    font-size: 16px;
+    margin: 5px;
+    padding: 12px !important;
+  }
 }
 @media screen and (max-width: 597px) {
   .home-section,
@@ -144,6 +157,15 @@
     height: 250px !important;
     background-repeat: no-repeat;
     background-position: center;
+  }
+  .home-title,
+  .home1-title,
+  .home2-title {
+    font-size: 12px;
+    padding: 8px !important;
+  }
+  .more-button {
+    font-size: 12px !important;
   }
 }
 @media screen and (max-width: 404px) {
@@ -233,8 +255,37 @@
   flex-direction: column;
   gap: 15px;
 }
+.data {
+  color: #0a1172eb;
+}
 .more-button {
-  background-color: blue !important;
+  background-color: red !important;
   color: #ffffff !important;
   text-transform: none !important ;
+}
+.order-image {
+  height: 140px;
+  width: 100%;
+  object-fit: cover;
+}
+.order-details {
+  padding: 15px;
+}
+.book-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.about-company {
+  color: red;
+}
+.about-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
