--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 .Appbar {
   background-color: #fdfdfdeb !important;
 }
-.css-1y942vo-MuiButtonBase-root-MuiButton-root {
+.nav-btn {
   font-family: "Gideon Roman", cursive !important;
   text-transform: none;
   color: black !important;
